feat: add gen cer
