# src/swagger.json
@@ -85,6 +85,34 @@
           }
         }
       },
+      "office": {
+        "type": "object",
+        "properties": {
+          "nameOffice": {
+            "type": "string"
+          },
+          "address": {
+            "type": "string"
+          },
+          "phone": {
+            "type": "string"
+          },
+          "kindOfBusiness": {
+            "type": "number"
+          },
+          "owner": {
+            "type": "string"
+          }
+        }
+      },
+      "officeId": {
+        "type": "object",
+        "properties": {
+          "officeId": {
+            "type": "string"
+          }
+        }
+      },
       "areaNumber": {
         "type": "object",
         "properties": {
@@ -309,6 +337,80 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/responseSuccessObject"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/office": {
+      "post": {
+        "tags": ["Expert"],
+        "description": "",
+        "parameters": [
+          {
+            "in": "body",
+            "schema": {
+              "$ref": "#/components/schemas/office"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/responseSuccessString"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/office/:officeId": {
+      "get": {
+        "tags": ["Expert"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "officeId",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/responseSuccessString"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/file/:officeId": {
+      "get": {
+        "tags": ["Expert"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "officeId",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/responseSuccessString"
                 }
               }
             }
